// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Billing Summary should render correctly for a paid plan 1`] = `
<div>
  <Component
    account={
      Object {
        "billing": Object {},
      }
    }
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Change Plan",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <PlanSummary
        label="Your Plan"
        plan={
          Object {
            "isFree": false,
          }
        }
      />
    </Panel.Section>
    <DedicatedIpSummarySection
      count={0}
      onClick={[Function]}
      plan={
        Object {
          "isFree": false,
        }
      }
    />
  </Panel>
  <Panel
    title="Billing"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        billing={Object {}}
        label="Credit Card"
      />
    </Panel.Section>
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <Connect(InvoiceHistory)
    invoices={Array []}
  />
  <Component />
  <Component />
  <Modal
    onClose={[Function]}
    open={false}
  />
</div>
`;

exports[`Component: Billing Summary should render correctly for a standard free plan 1`] = `
<div>
  <Component
    account={
      Object {
        "billing": Object {},
      }
    }
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <PlanSummary
        label="Your Plan"
        plan={
          Object {
            "isFree": true,
          }
        }
      />
    </Panel.Section>
  </Panel>
  <Connect(InvoiceHistory)
    invoices={Array []}
  />
  <Component />
  <Component />
  <Modal
    onClose={[Function]}
    open={false}
  />
</div>
`;

exports[`Component: Billing Summary should render correctly if you can't buy IPs 1`] = `
<div>
  <Component
    account={
      Object {
        "billing": Object {},
      }
    }
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <PlanSummary
        label="Your Plan"
        plan={
          Object {
            "isFree": true,
          }
        }
      />
    </Panel.Section>
  </Panel>
  <Panel
    title="Billing"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        billing={Object {}}
        label="Credit Card"
      />
    </Panel.Section>
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <Connect(InvoiceHistory)
    invoices={Array []}
  />
  <Component />
  <Component />
  <Modal
    onClose={[Function]}
    open={false}
  />
</div>
`;

exports[`Component: Billing Summary should render correctly if you can't change your plan 1`] = `
<div>
  <Component
    account={
      Object {
        "billing": Object {},
      }
    }
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section>
      <PlanSummary
        label="Your Plan"
        plan={
          Object {
            "isFree": true,
          }
        }
      />
    </Panel.Section>
    <DedicatedIpSummarySection
      count={0}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
  </Panel>
  <Panel
    title="Billing"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        billing={Object {}}
        label="Credit Card"
      />
    </Panel.Section>
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <Connect(InvoiceHistory)
    invoices={Array []}
  />
  <Component />
  <Component />
  <Modal
    onClose={[Function]}
    open={false}
  />
</div>
`;

exports[`Component: Billing Summary should render correctly if you can't update your billing info 1`] = `
<div>
  <Component
    account={
      Object {
        "billing": Object {},
      }
    }
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <PlanSummary
        label="Your Plan"
        plan={
          Object {
            "isFree": true,
          }
        }
      />
    </Panel.Section>
    <DedicatedIpSummarySection
      count={0}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
  </Panel>
  <Connect(InvoiceHistory)
    invoices={Array []}
  />
  <Component />
  <Component />
  <Modal
    onClose={[Function]}
    open={false}
  />
</div>
`;

exports[`Component: Billing Summary should render with IP modal open 1`] = `
<div>
  <Component
    account={
      Object {
        "billing": Object {},
      }
    }
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <PlanSummary
        label="Your Plan"
        plan={
          Object {
            "isFree": true,
          }
        }
      />
    </Panel.Section>
    <DedicatedIpSummarySection
      count={0}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
  </Panel>
  <Panel
    title="Billing"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        billing={Object {}}
        label="Credit Card"
      />
    </Panel.Section>
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <Connect(InvoiceHistory)
    invoices={Array []}
  />
  <Component />
  <Component />
  <Modal
    onClose={[Function]}
    open={true}
  >
    <AddIpsForm
      onClose={[Function]}
    />
  </Modal>
</div>
`;

exports[`Component: Billing Summary should render with the billing contact modal open 1`] = `
<div>
  <Component
    account={
      Object {
        "billing": Object {},
      }
    }
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <PlanSummary
        label="Your Plan"
        plan={
          Object {
            "isFree": true,
          }
        }
      />
    </Panel.Section>
    <DedicatedIpSummarySection
      count={0}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
  </Panel>
  <Panel
    title="Billing"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        billing={Object {}}
        label="Credit Card"
      />
    </Panel.Section>
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <Connect(InvoiceHistory)
    invoices={Array []}
  />
  <Component />
  <Component />
  <Modal
    onClose={[Function]}
    open={true}
  >
    <UpdateContactForm
      onCancel={[Function]}
    />
  </Modal>
</div>
`;

exports[`Component: Billing Summary should render with the payment info modal open 1`] = `
<div>
  <Component
    account={
      Object {
        "billing": Object {},
      }
    }
  />
  <Panel
    accent={true}
    title="Plan Overview"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <PlanSummary
        label="Your Plan"
        plan={
          Object {
            "isFree": true,
          }
        }
      />
    </Panel.Section>
    <DedicatedIpSummarySection
      count={0}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
  </Panel>
  <Panel
    title="Billing"
  >
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        billing={Object {}}
        label="Credit Card"
      />
    </Panel.Section>
    <Panel.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.Section>
  </Panel>
  <Connect(InvoiceHistory)
    invoices={Array []}
  />
  <Component />
  <Component />
  <Modal
    onClose={[Function]}
    open={true}
  >
    <UpdatePaymentForm
      onCancel={[Function]}
    />
  </Modal>
</div>
`;
